openai backend stuffs

--- a/config/version.yml
+++ b/config/version.yml
@@ -1,4 +1,4 @@
 version:
-  build_date: "Thu Sep 12 17:49:16 PDT 2024"
-  build: "88f0457"
-  branch: "base"
+  build_date: "Thu Sep 12 18:20:23 PDT 2024"
+  build: "171287c"
+  branch: "request"
